--- a/web/chart.html
+++ b/web/chart.html
@@ -60,7 +60,7 @@ body {
 <script>
 
 var margin = {top: 40, right: 20, bottom: 30, left: 60},
-    width = 1800 - margin.left - margin.right,
+    width = 1200 - margin.left - margin.right,
     height = 700 - margin.top - margin.bottom;
 
 var formatPercent = d3.format(".0%");
@@ -77,8 +77,7 @@ var xAxis = d3.svg.axis()
 
 var yAxis = d3.svg.axis()
     .scale(y)
-    .orient("left")
-    .tickFormat(formatPercent);
+    .orient("left");
 
 var tip = d3.tip()
   .attr('class', 'd3-tip')
@@ -99,10 +98,10 @@ d3.csv("crims_por_rota.tsv", type, function(error, data) {
 
 
 
-  data.sort(function(a,b) { return parseFloat(b.crime) - parseFloat(a.crime) } );
+  data.sort(function(a,b) { return parseFloat(a.crime) - parseFloat(b.crime) } );
 
 
-  x.domain(data.map(function(d) { return d.rota.substring(0,4); }));
+  x.domain(data.map(function(d) { return d.rota.substring(0,5); }));
   y.domain([0, d3.max(data, function(d) { return d.crime; })]);
 
   svg.append("g")
@@ -118,13 +117,13 @@ d3.csv("crims_por_rota.tsv", type, function(error, data) {
       .attr("y", 6)
       .attr("dy", ".71em")
       .style("text-anchor", "end")
-      .text("Frequency");
+      .text("Crimes");
 
   svg.selectAll(".bar")
       .data(data)
     .enter().append("rect")
       .attr("class", "bar")
-      .attr("x", function(d) { return x(d.rota.substring(0,4)); })
+      .attr("x", function(d) { return x(d.rota.substring(0,5)); })
       .attr("width", x.rangeBand())
       .attr("y", function(d) { return y(d.crime); })
       .attr("height", function(d) { return height - y(d.crime); })
